--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</div>
 				<img src="assets/GC_Logo_Web.svg" id="gc-hand" />
 				<!--<img src="assets/Feature.gif" id="img-feature" />-->
-				<video id="img-feature" autoplay loop>
+				<video id="img-feature" autoplay="autoplay" loop="loop">
 					<source src="assets/Feature.mov" type="video/quicktime"/>
 				</video>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 656 1000">
