--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<img src="assets/GC_Logo_Web.svg" id="gc-hand" />
 				<!--<img src="assets/Feature.gif" id="img-feature" />-->
 				<video id="img-feature" autoplay="autoplay" loop="loop">
-					<source src="assets/Feature.mov" type="video/quicktime"/>
+					<source src="assets/Feature.mp4" type="video/mp4"/>
 				</video>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 656 1000">
 					<defs>
