--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 							<i class="fab fa-steam-square"></i>
 						</a>
 
-						<a href="#" class="social-btn" onclick=" window.open('https://discord.com/invite/voxgames','_blank')">
+						<a href="#" class="social-btn" onclick=" window.open('https://discord.gg/gameclaw','_blank')">
 							<span></span>
 							<span></span>
 							<span></span>
