--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<h2>s t u d i o</h2>
 				</div>
 				<img src="assets/GC_Logo_Web.svg" id="gc-hand" />
-				<video id="img-feature" autoplay="autoplay" loop="loop">
+				<video id="img-feature" autoplay="autoplay" loop="loop" muted="muted">
 					<source src="assets/Feature.mp4" type="video/mp4"/>
 				</video>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 656 1000">
