--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 				<img src="assets/GC_Logo_Web.svg" id="gc-hand" />
 				<video id="img-feature" autoplay="autoplay" loop="loop" muted="muted">
 					<source src="assets/Feature.mp4" type="video/mp4"/>
+					<source src="assets/Feature.webm" type="video/webm"/>
 				</video>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 656 1000">
 					<defs>
