--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				<video id="img-feature" autoplay="autoplay" loop="loop" muted="muted">
 					<source src="assets/Feature.mp4" type="video/mp4"/>
 					<source src="assets/Feature.webm" type="video/webm"/>
+					<source src="assets/Feature.mov" type="video/quicktime"/>
 				</video>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 656 1000">
 					<defs>
@@ -127,7 +128,7 @@
 			<section class="page" id="page-4">
 				<div class="contacts-flexbox">
 
-					<a class="email-link" href="mailto:contact@gameclaw.io">contact@gameclaw.io</a>
+					<a class="email-link" href="mailto:gameclaw@protonmail.com">gameclaw@protonmail.com</a>
 
 					<div class="contacts-icons-box">
 
