--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					</div>
 					<div class="about-content-flexbox">
 						<div class="person">
-							<img src="assets/avatar-steve_bg.png" class="avatar-img" />
+							<img src="assets/avatar-steve-portrait.png" class="avatar-img" />
 							<div class="person-text">
 								<h3 class="person-name">steve</h3>
 								<h4 class="person-job">developer</h4>
@@ -75,7 +75,7 @@
 						</div>
 
 						<div class="person">
-							<img src="assets/avatar-mike_bg.png" class="avatar-img" />
+							<img src="assets/avatar-mike-portrait.png" class="avatar-img" />
 							<div class="person-text">
 								<h3 class="person-name">mike</h3>
 								<h4 class="person-job">developer</h4>
