--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
 					</div>
 					<div class="about-content-flexbox">
 						<div class="person">
-							<img src="assets/avatar-steve-portrait.png" class="avatar-img" />
+							<img src="assets/avatar-steve-final.png" class="avatar-img" />
 							<div class="person-text">
 								<h3 class="person-name">steve</h3>
-								<h4 class="person-job">developer</h4>
+								<h4 class="person-job">director</h4>
 								<p class="person-country">australia</p>
 							</div>
 						</div>
 
 						<div class="person">
-							<img src="assets/avatar-alex_bg.png" class="avatar-img" />
+							<img src="assets/avatar-alex-final.png" class="avatar-img" />
 							<div class="person-text">
 								<h3 class="person-name">alex</h3>
 								<h4 class="person-job">producer</h4>
@@ -75,7 +75,7 @@
 						</div>
 
 						<div class="person">
-							<img src="assets/avatar-mike-portrait.png" class="avatar-img" />
+							<img src="assets/avatar-mike-final.png" class="avatar-img" />
 							<div class="person-text">
 								<h3 class="person-name">mike</h3>
 								<h4 class="person-job">developer</h4>
