Update Games to include OP

--- a/index.html
+++ b/index.html
@@ -95,14 +95,18 @@
 						<div class="game-card-label">regions of ruin</div>
 						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/680360/Regions_Of_Ruin/','_blank')"></i>
 					</div>
-
-					<div class="game-card">
+						<div class="game-card">
 						<img src="assets/ror2.jpg" class="game-art" />
 						<div class="game-card-label">regions of ruin 2<div class="in-dev">[in development]</div></div>
-						<i class="fas fa-shopping-cart"></i>
-						<i class="fas fa-ban"></i>
+						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/1375750/Regions_of_Ruin_2/','_blank')"></i>
 					</div>
 
+					<div class="game-card">
+						<img src="assets/op.jpg" class="game-art" />
+						<div class="game-card-label">obsidian prince<div class="in-dev">[in development]</div></div>
+						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/1373260/Obsidian_Prince/','_blank')"></i>
+					</div>
+					
 					<div class="game-card">
 						<img src="assets/bts.jpg" class="game-art" />
 						<div class="game-card-label">between the stars</div>
