--- a/index.html
+++ b/index.html
@@ -91,36 +91,36 @@
 				<div class="game-gallery">
 
 					<div class="game-card">
-						<img src="assets/ror.jpg" class="game-art" />
+						<img src="assets/ror_m.jpg" class="game-art" />
 						<div class="game-card-label">regions of ruin</div>
 						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/680360/Regions_Of_Ruin/','_blank')"></i>
 					</div>
 						<div class="game-card">
-						<img src="assets/ror2.jpg" class="game-art" />
+						<img src="assets/ror2_m.jpg" class="game-art" />
 						<div class="game-card-label">regions of ruin 2<div class="in-dev">[in development]</div></div>
 						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/1375750/Regions_of_Ruin_2/','_blank')"></i>
 					</div>
 
 					<div class="game-card">
-						<img src="assets/op.jpg" class="game-art" />
+						<img src="assets/op_m.jpg" class="game-art" />
 						<div class="game-card-label">obsidian prince<div class="in-dev">[in development]</div></div>
 						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/1373260/Obsidian_Prince/','_blank')"></i>
 					</div>
 					
 					<div class="game-card">
-						<img src="assets/bts.jpg" class="game-art" />
+						<img src="assets/bts_m.jpg" class="game-art" />
 						<div class="game-card-label">between the stars</div>
 						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/727130/Between_the_Stars/','_blank')"></i>
 					</div>
 
 					<div class="game-card">
-						<img src="assets/ms.jpg" class="game-art" />
+						<img src="assets/ms_m.jpg" class="game-art" />
 						<div class="game-card-label">meeple station</div>
 						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/900010/Meeple_Station/','_blank')"></i>
 					</div>
 
 					<div class="game-card">
-						<img src="assets/justice.jpg" class="game-art" />
+						<img src="assets/justice_m.jpg" class="game-art" />
 						<div class="game-card-label">justice.exe<div class="in-dev">[in development]</div></div>
 						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/1291210/Justiceexe/','_blank')"></i>
 					</div>
