--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
 						<div class="game-card-label">justice.exe<div class="in-dev">[in development]</div></div>
 						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/1291210/Justiceexe/','_blank')"></i>
 					</div>
+					
+					<div class="game-card">
+						<img src="assets/btm_m.jpg" class="game-art" />
+						<div class="game-card-label">justice.exe<div class="in-dev">[in development]</div></div>
+						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/1728840/Beneath_the_Mountain/','_blank')"></i>
+					</div>
 
 				</div>
 			</section>
