and also are not very detail oriented

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 					<div class="game-card">
 						<img src="assets/op_m.jpg" class="game-art" />
-						<div class="game-card-label">obsidian prince<div class="in-dev">[in development]</div></div>
+						<div class="game-card-label">obsidian prince<div class="in-dev">[early access]</div></div>
 						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/1373260/Obsidian_Prince/','_blank')"></i>
 					</div>
 					
