fixed email address

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 			<section class="page" id="page-4">
 				<div class="contacts-flexbox">
 
-					<a class="email-link" href="mailto:gameclaw@protonmail.com">gameclaw@protonmail.com</a>
+					<a class="email-link" href="mailto:contact@gameclaw.io">contact@gameclaw.io</a>
 
 					<div class="contacts-icons-box">
 
