Revert "Merge branch 'steve'"
This reverts commit 3660d897e965e0689f788f5be251e21fd7293f66, reversing
changes made to 5bad2f5749ee0338532b98a13012cc4adc2a18a5.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<section class="page" id="page-4">
 				<div class="contacts-flexbox">
 
-					<a class="email-link" href="mailto:contact@gameclaw.io">contact@gameclaw.io</a>
+					<a class="email-link" href="mailto:gameclaw@protonmail.com">gameclaw@protonmail.com</a>
 
 					<div class="contacts-icons-box">
 
