--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 					<div class="game-card">
 						<img src="assets/btm_m.jpg" class="game-art" />
-						<div class="game-card-label">beneath the mountain<div class="in-dev">[in development]</div></div>
+						<div class="game-card-label">beneath the mountain<div class="in-dev">[in early access]</div></div>
 						<i class="fas fa-shopping-cart" onclick="window.open('https://store.steampowered.com/app/1728840/Beneath_the_Mountain/','_blank')"></i>
 					</div>
 					
